# Red-Shift-Weaponizer

./: .gitignore  .gitmodules  CMakeLists.txt  Red Shift Weaponizer.sln
CodeReview/: Brandons_testing.cpp  README.md
include/: inputGetter.h  weaponAssembler.h
src/: inputGetter.cpp  main.cpp  weaponAssembler.cpp
test/: CMakeLists.txt  weapon_tests.cpp
